--- a/test/index/DD.html
+++ b/test/index/DD.html
@@ -34,48 +34,51 @@
 	</div>
 
 	<script>
-		document.addEventListener('DOMContentLoaded', function() {
-			fetch('../js/nav-data.json')
-				.then(response => response.json())
-				.then(data => {
-					renderNavigation(data.dd);
-					loadVersionInfo(data);
-				})
-				.catch(error => {
-					console.error('加载导航数据时出错:', error);
-					document.getElementById('nav-content-container').innerHTML = '<div class="alert alert-info mx-3">暂无导航数据，请先上传JSON文件</div>';
-					document.getElementById('uptime1').textContent = 'Beta:error';
-            		document.getElementById('state1').textContent = 'Error';
-				});
-		});
+	document.addEventListener('DOMContentLoaded', function() {
+		fetch('../js/nav-data.json')
+			.then(response => response.json())
+			.then(data => {
+				renderNavigation(data.dd);
+				loadVersionInfo(data);
+			})
+			.catch(error => {
+				console.error('加载导航数据时出错:', error);
+				document.getElementById('nav-content-container').innerHTML = '<div class="alert alert-info mx-3">暂无导航数据，请先上传JSON文件</div>';
+				document.getElementById('uptime1').textContent = 'Beta:error';
+				document.getElementById('state1').textContent = 'Error';
+			});
+	});
+	
+	function renderNavigation(navData) {
+		const navContentContainer = document.getElementById('nav-content-container');
+		navContentContainer.innerHTML = '';
 		
-		function renderNavigation(navData) {
-			const navContentContainer = document.getElementById('nav-content-container');
-			navContentContainer.innerHTML = '';
-			
-			if (!navData || !navData.tabs || navData.tabs.length === 0) {
-				navContentContainer.innerHTML = '<div class="alert alert-info mx-3">暂无导航数据</div>';
-				return;
-			}
-			
-			navData.tabs.forEach((tab, index) => {
-				const section = document.createElement('div');
-				section.className = 'mt-3 mx-3';
-				section.innerHTML = `
-					<div class="alert alert-secondary shadow" role="alert">${tab.name}</div>
-					<div id="ar${index+1}" class="d-flex flex-wrap p-2">
-						${tab.items.map(item => `
+		if (!navData || !navData.tabs || navData.tabs.length === 0) {
+			navContentContainer.innerHTML = '<div class="alert alert-info mx-3">暂无导航数据</div>';
+			return;
+		}
+		
+		navData.tabs.forEach((tab, index) => {
+			const section = document.createElement('div');
+			section.className = 'mt-3 mx-3';
+			section.innerHTML = `
+				<div class="alert alert-secondary shadow" role="alert">${tab.name}</div>
+				<div id="ar${index+1}" class="d-flex flex-wrap p-2">
+					${tab.items.map(item => {
+						const iconUrl = item.icon || `https://api.afmax.cn/so/ico/index.php?r=${encodeURIComponent(item.url)}`;
+						return `
 							<a href="${item.url}" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1">
-								<img class="border rounded-circle w" src="${item.icon}" loading="lazy" onerror="this.src='../img/index.png'">
+								<img class="border rounded-circle w" src="${iconUrl}" loading="lazy" onerror="this.src='../img/index.png'">
 								<h6 class="t1">${item.name}</h6>
 							</a>
-						`).join('')}
-					</div>
-				`;
-				navContentContainer.appendChild(section);
-			});
-		}
-	</script>
+						`;
+					}).join('')}
+				</div>
+			`;
+			navContentContainer.appendChild(section);
+		});
+	}
+</script>
 
 	<!--背景-->
 	<div class="z-1">
