更新管理页面路径

--- a/test/index/Develop.html
+++ b/test/index/Develop.html
@@ -15,8 +15,8 @@
     <div class="z-3 d-flex flex-row position-fixed">
         <button onclick="window.location.href = '../index.html'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>返回</strong></button>
         <button onclick="window.location.href = 'More.html'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>More</strong></button>
-        <button onclick="window.location.href = 'nav-manager.html'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>导航管理</strong></button>
-        <button onclick="window.location.href = 'vol-manager.html'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>版本管理</strong></button>
+        <button onclick="window.location.href = 'manager/nav-manager.html'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>导航管理</strong></button>
+        <button onclick="window.location.href = 'manager/vol-manager.html'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>版本管理</strong></button>
     </div>
     <div class="z-2 d-flex flex-column mx-auto mt-5 pt-2">
         <div class="d-flex flex-column">
