--- a/test/index/manager/vol-manager.html
+++ b/test/index/manager/vol-manager.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>版本管理系统</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -303,7 +303,7 @@
     <div class="footer">
         <div class="container">
             <p>版本管理系统 &copy; 2023 Xiaolan</p>
-            <p><a href="index.html" class="text-decoration-none">返回主页</a></p>
+            <p><a href="../../index.html" class="text-decoration-none">返回主页</a></p>
         </div>
     </div>
     
@@ -374,7 +374,7 @@
         </div>
     </div>
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../../js/bootstrap.bundle.min.js"></script>
     <script>
         // 版本数据 - 初始为空
         let versionData = {
