--- a/test/index/More.html
+++ b/test/index/More.html
@@ -25,7 +25,12 @@
 		</form>
 		<button id="more-s" class="more-tag btn btn-info dropdown-toggle shadow" type="button">•••</button>
 		<button id="more-c" class="more-tag btn btn-info shadow mx-2 oh" type="button">清空</button>
-		<button id="more-mm" class="more-tag btn btn-info shadow oh" style="display: none;" onclick="window.location.href = 'MM.htm'" type="button">M-M</button>
+		<div id="more-mm" style="display: none;">
+			<button class="more-tag btn btn-info shadow oh" onclick="window.location.href = 'MM.htm'" type="button">M-M</button>
+			<button class="more-tag btn btn-info shadow oh" onclick="window.location.href = 'manager/nav-manager.html'" type="button">nav-manager</button>
+			<button class="more-tag btn btn-info shadow oh" onclick="window.location.href = 'manager/vol-manager.html'" type="button">vol-manager</button>
+		</div>
+		
 	</div>
 	<div class="z-2 d-flex flex-column mx-auto mt-5 pt-2">
 		<div class="d-flex flex-column">
