更新管理页面薄荷绿，去除cms

--- a/test-trae/index.html
+++ b/test-trae/index.html
@@ -20,12 +20,7 @@
 </head>
 
 <body style="overflow-y: hidden">
-	<!-- 管理入口按钮 -->
-	<div class="z-5 oh">
-		<div id="tc" class="tc">
-			<a href="cms.html" class="btn btn-primary" target="_blank">管理</a>
-		</div>
-	</div>
+	<!-- 管理功能已移除 -->
 	<div class="z-2 d-flex flex-column mx-auto">
 		<div class="d-flex flex-column justify-content-end" style="height: 40%;">
 			<div class="mx-auto shadow mt-3 rounded-3"><img id="indexing" width="250" src="img/login.png" class="p-1">
