管理页面跳转优化

--- a/test-trae/index/manager/nav-manager.html
+++ b/test-trae/index/manager/nav-manager.html
@@ -88,6 +88,23 @@
     </style>
 </head>
 <body class="manager-body">
+    <!-- 返回首页按钮 -->
+    <a href="../../index.html" class="home-button bg-dark text-white" title="返回首页">
+        <i class="fas fa-home"></i>
+    </a>
+    
+    <!-- 管理页面导航栏 -->
+    <div class="manager-nav">
+        <a href="nav-manager.html" class="manager-nav-button active" title="导航数据管理">
+            <i class="fas fa-sitemap me-1"></i>导航管理
+        </a>
+        <a href="MM-generator.html" class="manager-nav-button" title="密码生成器">
+            <i class="fas fa-key me-1"></i>密码生成
+        </a>
+        <a href="vol-manager.html" class="manager-nav-button" title="版本管理">
+            <i class="fas fa-code-branch me-1"></i>版本管理
+        </a>
+    </div>
     <div class="manager-header py-4 mb-4">
         <div class="container">
             <h1 class="text-center mb-2">导航数据管理系统</h1>
