--- a/test-trae/index/manager/MM-generator.html
+++ b/test-trae/index/manager/MM-generator.html
@@ -103,6 +103,19 @@
         <i class="fas fa-home"></i>
     </a>
     
+    <!-- 管理页面导航栏 -->
+    <div class="manager-nav">
+        <a href="nav-manager.html" class="manager-nav-button" title="导航数据管理">
+            <i class="fas fa-sitemap me-1"></i>导航管理
+        </a>
+        <a href="MM-generator.html" class="manager-nav-button active" title="密码生成器">
+            <i class="fas fa-key me-1"></i>密码生成
+        </a>
+        <a href="vol-manager.html" class="manager-nav-button" title="版本管理">
+            <i class="fas fa-code-branch me-1"></i>版本管理
+        </a>
+    </div>
+    
     <div class="container flex-grow-1 d-flex flex-column">
         <header class="manager-header text-center text-white p-4 rounded mb-4">
             <h1 class="mb-2">MM-generator</h1>
