--- a/test-trae/index/More.html
+++ b/test-trae/index/More.html
@@ -27,8 +27,7 @@
 		<button id="more-c" class="more-tag btn btn-info shadow mx-2 oh" type="button">清空</button>
 		<div id="more-mm" style="display: none;">
 			<button class="more-tag btn btn-info shadow oh" onclick="window.location.href = 'MM.htm'" type="button">M-M</button>
-			<button class="more-tag btn btn-info shadow oh" onclick="window.location.href = 'manager/nav-manager.html'" type="button">nav-manager</button>
-			<button class="more-tag btn btn-info shadow oh" onclick="window.location.href = 'manager/vol-manager.html'" type="button">vol-manager</button>
+			<button class="more-tag btn btn-info shadow oh" onclick="window.location.href = 'manager/nav-manager.html'" type="button">manager</button>
 		</div>
 		
 	</div>
