更新管理页面的导航栏

--- a/test-trae/index/manager/nav-manager.html
+++ b/test-trae/index/manager/nav-manager.html
@@ -96,13 +96,13 @@
     <!-- 管理页面导航栏 -->
     <div class="manager-nav">
         <a href="nav-manager.html" class="manager-nav-button active" title="导航数据管理">
-            <i class="fas fa-sitemap me-1"></i>导航管理
+            <i class="fas fa-sitemap"></i>
         </a>
         <a href="MM-generator.html" class="manager-nav-button" title="密码生成器">
-            <i class="fas fa-key me-1"></i>密码生成
+            <i class="fas fa-key"></i>
         </a>
         <a href="vol-manager.html" class="manager-nav-button" title="版本管理">
-            <i class="fas fa-code-branch me-1"></i>版本管理
+            <i class="fas fa-code-branch"></i>
         </a>
     </div>
     <div class="manager-header py-4 mb-4">
