--- a/test-trae/index/manager/MM-generator.html
+++ b/test-trae/index/manager/MM-generator.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MM-generator</title>
     <link href="../../css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="../../css/all.min.css">
     <link rel="stylesheet" href="../../css/manager-styles.css">
     <style>
         /* 页面特定样式 */
