--- a/test-trae/index/manager/nav-manager.html
+++ b/test-trae/index/manager/nav-manager.html
@@ -212,7 +212,7 @@
                 <div class="tab-content" id="navTabContent"></div>
                 
                 <!-- 特殊栏目管理区域 -->
-                <div id="specialSection" class="d-none">
+                <div id="specialSection">
                     <div class="special-section p-3 mb-3">
                         <div class="d-flex justify-content-between align-items-center">
                             <div>
