--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 				</div>
 				<div class="float-end">
 					<span class="badge text-black-50">
+						<a href="test-trae/index.html" rel="nofollow" target="_blank">Trae</a> •
 						<a href="test/index.html" rel="nofollow" target="_blank">Ts</a> • 
 						<a href="https://xiaolanqqai-sturdy-journey-97xqj446r6wfpw6v.github.dev/" rel="nofollow" target="_blank">Dev</a> • 
 						<a id="uptime1" href="index/Develop.html">Beta:error</a>
