--- a/test-trae/index/manager/vol-manager.html
+++ b/test-trae/index/manager/vol-manager.html
@@ -7,6 +7,8 @@
     <link href="../../css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../../css/all.min.css">
     <link href="../../css/manager-styles.css" rel="stylesheet">
+    <!-- 引入通用脚本 -->
+    <script src="../../js/manager-common.js"></script>
     <style>
         /* 页面特定样式 */
         .version-card {
