--- a/index/manager/explore-manager.html
+++ b/index/manager/explore-manager.html
@@ -187,7 +187,7 @@
 </head>
 <body class="manager-body">
     <!-- 返回首页按钮 -->
-    <a href="../../index.html" class="home-button bg-dark text-white" title="返回首页">
+    <a href="../../index.html" class="home-button" title="返回首页">
         <i class="fas fa-home"></i>
     </a>
     
