--- a/index/More.html
+++ b/index/More.html
@@ -26,7 +26,7 @@
 		<button id="more-s" class="more-tag btn btn-info dropdown-toggle shadow" type="button">•••</button>
 		<button id="more-c" class="more-tag btn btn-info shadow mx-2 oh" type="button">清空</button>
 		<div id="more-mm" style="display: none;">
-			<button class="more-tag btn btn-info shadow oh" onclick="window.location.href = 'MM.htm'" type="button">M-M</button>
+			<button class="more-tag btn btn-info shadow oh" onclick="window.location.href = 'MM-secure.htm'" type="button">M-M</button>
 			<button class="more-tag btn btn-info shadow oh" onclick="window.location.href = 'manager/nav-manager.html'" type="button">manager</button>
 		</div>
 		
